# par-block-chain

./: README.md  SHA256-LICENSE.txt
analysis/data/: results-original-diff1.csv
analysis/plotting/: plot-all-dynamic.R  plot-all-hardware.R  plot-seq.R
analysis/plotting/compare-all/data/: results-all-dynamic.csv  results-all-hardware.csv
analysis/plotting/dynamic-thread-num/data/: results-omp-dynamic.csv  results-pure-threads-dynamic.csv  results-tpool-futures-dynamic.csv
analysis/plotting/hardware-thread-num/data/: results-omp-hardware.csv  results-pure-threads-hardware.csv  results-tpool-futures-hardware.csv
analysis/plotting/sequential/: .RData  .Rhistory
analysis/plotting/sequential/data/: baseline-statistics-diff1.csv  (+5 more)
implementations/omp/: CMakeLists.txt
implementations/omp/src/: block_chain.cpp  block_chain.h  main.cpp  sha256.cpp  sha256.h
implementations/sequential/src/: block_chain.cpp  block_chain.h  main.cpp
implementations/sequential/util/: file_io.hpp
implementations/threads-atomics/: CMakeLists.txt
implementations/threads-atomics/src/: block_chain.cpp  block_chain.h  main.cpp
implementations/threads-atomics/util/: timer.hpp
implementations/tpool-futures/src/: block_chain.cpp  block_chain.h  main.cpp  sha256.h
implementations/tpool-futures/util/: file_io.hpp
omp_impl/src/: block_chain.cpp  block_chain.h
original_impl/: CMakeLists.txt
original_impl/src/: block_chain.cpp  block_chain.h  main.cpp
promise-future_impl/src/: block_chain.h  main.cpp
pure-threads_impl/src/: block_chain.cpp  block_chain.h  sha256.cpp  sha256.h
pure-threads_impl/util/: timer.hpp
thread-pool_impl/: CMakeLists.txt
thread-pool_impl/include/tpool/: tpool.hpp
thread-pool_impl/src/: block_chain.cpp  block_chain.h  main.cpp
thread-pool_impl/util/: file_io.hpp
